--- a/html/tables/assessment-start/minimal-table.css
+++ b/html/tables/assessment-start/minimal-table.css
@@ -33,3 +33,8 @@ tr:nth-child(odd) td {
 caption {
   padding: 10px;
 }
+.nameTop{
+  border-style:solid;
+  border-bottom: none;
+  font-weight:bold;
+}
